syntax = "proto3";
option java_package = "com.vang.authorservice";
option java_outer_classname = "AuthorGrpcServer";
option java_multiple_files = true;
package com.vang;

service GetAuthorById {
  rpc getData(GetAuthorByIdRequest) returns (GetAuthorByIdReply);
}

service UpdateCountAuthor {
  rpc updateCount(UpdateCountAuthorRequest) returns(UpdateCountAuthorReply);
}

message GetAuthorByIdRequest {
  string authorId = 1;
}

message GetAuthorByIdReply {
  bool status = 1;
  string responseJson = 2;
}

message UpdateCountAuthorRequest {
  string authorId = 1;
  int32 typeUpdate = 2;
}

message UpdateCountAuthorReply {
  bool status = 1;
}